--- a/templates/page/index.html
+++ b/templates/page/index.html
@@ -224,7 +224,7 @@
                                             </li>
                                         </ul>
                                     </nav>
-                                           <div class="page-header__languages">
+                                           <div class="main-nav__languages">
                 <form  action="{% url 'set_language' %}" method="post">{% csrf_token %}
                     <ul class="drop-list">
                         {% for language in languages %}
